<resources>
    <string name="app_name">Milk Store</string>
    <string name="product_image">Product image</string>
    <string name="decrease_quantity">Decrease quantity</string>
    <string name="increase_quantity">Increase quantity</string>
    <string name="cart_all">All</string>
    <string name="cart_edit">Edit</string>
    <string name="cart_chat">Chat</string>
    <string name="error">Error</string>
    <string name="network_error">Network connection error</string>
    <string name="empty_cart">Nothing to see here</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="err_cart_update_failed">Could not update item.</string>
    <string name="err_cart_delete_failed">Could not remove item.</string>
    <string name="err_cart_calculate_total_failed">Could not calculate total.</string>
    <string name="err_cart_checkout_no_item">You have not selected any product.</string>
    <string name="err_cart_delete_no_item">Please select at least 1 product</string>
    <string name="confirm__cart_remove_selected_products">Really remove these products?</string>
    <string name="confirm_cart_remove_product">Really remove this product?</string>
    <string name="err_product_removal_failed">Some items could not be removed</string>
    <string name="checkout">Check out</string>
    <string name="NAME">Name</string>
    <string name="EMAIL">Email</string>
    <string name="PHONE_NUMBER">Phone Number</string>
    <string name="PASSWORD">Password</string>
    <string name="CONFIRM_PASSWORD">Confirm Password</string>
    <string name="LOGIN_BUTTON">Log In</string>
    <string name="REGISTER_BUTTON">Sign Up</string>
    <string name="INCORRECT_EMAIL_OR_PASSWORD">Incorrect email or password</string>
    <string name="INVALID_EMAIL_OR_NOT_CONFIRMED">Email is invalid or not confirmed</string>
    <string name="ERR_EMAIL_NOT_FOUND">Email not found.</string>
    <string name="ERR_INVALID_PASSWORD">Password must contain at least 8 characters, 1 uppercase, 1 lowercase, 1 number and 1 special character</string>
    <string name="OTP_SENT">OTP has been sent to your email.</string>
    <string name="REGISTER_CONFIRMATION_MAIL_SENT">A confirmation code has been sent to your email.</string>
    <string name="WELCOME_BACK">Welcome back!</string>
    <string name="PLEASE_LOG_IN">Log in to continue</string>
    <string name="WELCOME">Welcome!</string>
    <string name="PLEASE_SIGN_UP">Enter your account details to sign up</string>
    <string name="CONFIRM_YOUR_EMAIL">Confirm Your Email</string>
    <string name="REGISTER_ENTER_OTP">Enter the OTP sent to your email to finish registration</string>
    <string name="EMAIL_CONFIRMATION_SUCCESS">Email confirmation successful</string>
    <string name="FORGOT_PASSWORD_SUCCESS">Reset password successful. Logging in.</string>
    <string name="OTP">OTP</string>
    <string name="RESEND">Resend</string>
    <string name="VERIFY">VERIFY</string>
    <string name="TO_LOGIN">Already have an account? Log in</string>
    <string name="TO_REGISTER">Don\'t have an account? Sign up</string>
    <string name="TO_EMAIL_CONFIRMATION">Confirm your email</string>
    <string name="ERR_NAME_EMPTY">Name cannot be empty</string>
    <string name="ERR_EMAIL_EMPTY">Email cannot be empty</string>
    <string name="ERR_OTP_EMPTY">Invalid OTP</string>
    <string name="ERR_EMAIL_INVALID">Email is invalid</string>
    <string name="ERR_PHONE_NUMBER_EMPTY">Phone number cannot be empty</string>
    <string name="ERR_PHONE_NUMBER_INVALID">Phone number is invalid</string>
    <string name="ERR_PASSWORD_EMPTY">Password cannot be empty</string>
    <string name="ERR_PASSWORD_NOT_MATCH">Confirm password does not match</string>
    <string name="FORGOT_PASSWORD">Forgot Password?</string>
    <string name="RESET_YOUR_PASSWORD">Reset your password</string>
    <string name="INCORRECT_OTP">Incorrect OTP. Please try again.</string>
    <string name="GET_OTP">Get OTP</string>
    <string name="HOME">Home</string>
    <string name="NOTIFICATION">Notification</string>
    <string name="ACCOUNT">Account</string>
    <string name="MAP">Map</string>
    <string name="SUBMIT">Submit</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="set_shipping_address">To set shipping address page</string>
    <string name="placeholder_product_name">PRODUCT NAME</string>
    <string name="placeholder_category_name">CATEGORY</string>
    <string name="shipping_method">Shipping:</string>
    <string name="shipping_fee">Fee:</string>
    <string name="estimated_delivery">Estimated delivery:</string>
    <string name="subtotal">Subtotal:</string>
    <string name="payment_method">Payment method</string>
    <string name="cart_title">Cart</string>
    <string name="total_product_price">Total product price</string>
    <string name="total_shipping_fee">Total shipping fee</string>
    <string name="order_total">Grand total</string>
    <string name="checkout_title">Confirm order</string>
    <string name="order_total_footer">Total:</string>
    <string name="place_order">Place order</string>
    <string name="address_hint">Street address, district, city</string>
    <string name="select_address_prompt">Use another address</string>
    <string name="confirm_address">Confirm address</string>
    <string name="discount">Advance payment discount</string>
    <string name="order_summary">Summary</string>
    <string name="prompt_select_shipping_address">Please enter your shipping address.</string>
    <string name="prompt_select_shipping_method">Choose a shipping method</string>
    <string name="prompt_select_payment_method">How would you like to pay?</string>
    <string name="err_checkout_load_user_address_failed">Failed to load user data.</string>
    <string name="err_checkout_place_order_no_address">Hold your horses! Your address, if you please.</string>
    <string name="err_checkout_place_order_failed">Could not place order.</string>
    <string name="err_checkout_place_order_zalopay_connection_error">Could not connect to ZaloPay server.</string>
    <string name="err_checkout_place_order_zalopay_failed">Could not initiate transaction with ZaloPay.</string>
    <string name="err_checkout_place_order_zalopay_transaction_error">Transaction was not complete. Please try again.</string>
    <string name="success_checkout_place_order">Order successfully created.</string>
    <string name="not_available">N/A</string>
    <string name="undetermined">Undetermined</string>
    <string name="delete">Delete</string>
    <string name="confirm">Confirm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="err_auth_return_home">An error has occurred. Returning to home screen.</string>
    <string name="err_shipping_addr_update_failed">Could not update shipping address</string>
    <string name="order_placed_title">Thank you for your order!</string>
    <string name="order_placed_subtitle">Your order was successfully placed\nWe will process it shortly</string>
    <string name="estimated_delivery_summary">Delivered by</string>
    <string name="shipping_method_summary">Shipping</string>
    <string name="payment_method_summary">Payment method</string>
    <string name="order_total_summary">Order total</string>
    <string name="err_product_details_add_to_cart_failed">Could not add products to cart.</string>
    <string name="success_product_details_add_to_cart">Successfully added to cart.</string>
    <string name="btn_add_to_cart">Add to Cart</string>
    <string name="btn_view_details">View details</string>
    <string name="btn_buy_now">Buy now!</string>
    <string name="success_login">Success</string>
</resources>
